--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         <div id="EPISODIOS" class="spoty">
             <h2 class="spotytitulos"> Episodios</h2>
             <div class="spoty2">
-                <iframe class="sound1" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" width="100vh" height="232" frameborder="0" allowtransparency="true"></iframe> 
-                <iframe class="sound2" src="https://open.spotify.com/embed-podcast/show/4kYCRYJ3yK5DQbP5tbfZby" width="100vh" height="232" frameborder="0" allowtransparency="true"></iframe>
-                <iframe class="sound3" src="https://open.spotify.com/embed-podcast/show/5JxcIaIkN8zx3Zy7yD9snv" width="100vh" height="232" frameborder="0" allowtransparency="true"></iframe> 
-                <iframe class="sound4" src="https://open.spotify.com/embed-podcast/show/2Iibd5A6R7mxkCm4NwNmUn"  width="100vh" height="232" frameborder="0" allowtransparency="true"></iframe>
+                <iframe class="sound1" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" width="100vh" height="232" border="0"></iframe> 
+                <iframe class="sound2" src="https://open.spotify.com/embed-podcast/show/4kYCRYJ3yK5DQbP5tbfZby" width="100vh" height="232" border="0"></iframe>
+                <iframe class="sound3" src="https://open.spotify.com/embed-podcast/show/5JxcIaIkN8zx3Zy7yD9snv" width="100vh" height="232" border="0"></iframe> 
+                <iframe class="sound4" src="https://open.spotify.com/embed-podcast/show/2Iibd5A6R7mxkCm4NwNmUn"  width="100vh" height="232" border="0"></iframe>
         </div> 
     </div>
 
