se valido con w3c

--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
         <div id="EPISODIOS" class="spoty">
             <h2 class="spotytitulos"> Episodios</h2>
             <div class="spoty2">
-                <iframe class="sound1" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" width="100vh" height="232" border="0"></iframe> 
-                <iframe class="sound2" src="https://open.spotify.com/embed-podcast/show/4kYCRYJ3yK5DQbP5tbfZby" width="100vh" height="232" border="0"></iframe>
-                <iframe class="sound3" src="https://open.spotify.com/embed-podcast/show/5JxcIaIkN8zx3Zy7yD9snv" width="100vh" height="232" border="0"></iframe> 
-                <iframe class="sound4" src="https://open.spotify.com/embed-podcast/show/2Iibd5A6R7mxkCm4NwNmUn"  width="100vh" height="232" border="0"></iframe>
+                <iframe class="sound1" src="https://open.spotify.com/embed-podcast/show/2ySVrxGkN6n6frMTo9Nsrt" height="232" allow="encrypted-media" style=" width:100%;"></iframe>
+                <iframe class="sound2" src="https://open.spotify.com/embed-podcast/show/4kYCRYJ3yK5DQbP5tbfZby" height="232" allow="encrypted-media" style=" width:100%;"></iframe>
+                <iframe class="sound3" src="https://open.spotify.com/embed-podcast/show/5JxcIaIkN8zx3Zy7yD9snv" height="232" allow="encrypted-media" style=" width:100%;"></iframe>
+                <iframe class="sound4" src="https://open.spotify.com/embed-podcast/show/2Iibd5A6R7mxkCm4NwNmUn" height="232" allow="encrypted-media" style=" width:100%;"></iframe>
         </div> 
     </div>
 
         <!-- Venimos-->
         <div id="NOSOTROS" class="phone">
             <div class="venimos">
-                <img class="phone-cont" src="images/phone.png">
+                <img class="phone-cont" src="images/phone.png" alt="images/phone.png">
                     <article class="phonet">
                         
                         <h2 class="titulosphone"> De dónde <span class="salto"></span>vinimos</h2>
@@ -96,8 +96,8 @@
                     <img class="uno" src="images/grace-hopper.png" alt="grace-hopper">
                     <img class="uno2" src="images/Katie-Bouman.png" alt="Katie-Bouman">
                     <img class="uno3" src="images/Margaret_Hamilton.png" alt="Margaret_Hamilton">
-                    <img class="uno4" src="images/An E.R.A.Univac 1103 computer in the 1950s.png" alt="An E.R.A.Univac 1103 computer in the 1950s">
-                    <img class="uno5" src="images/Computer operators with an Eniac — the world’s first programmable general-purpose computer.png" alt="grace-hopper">
+                    <img class="uno4" src="images/An_E.R.A.Univac_1103-computer_in_the_1950s.png" alt="An_E.R.A.Univac_1103-computer_in_the_1950s">
+                    <img class="uno5" src="images/Computer_operators-with-an-Eniac—the-world’s-first-programmable-general-purpose-computer.png" alt="Computer_operators-with-an-Eniac—the-world’s-first-programmable-general-purpose-computer.png">
                     <img class="uno6" src="images/susan-kare.png" alt="susan-kare">
                 </div>
         </div>
@@ -108,20 +108,18 @@
         <div id="TOPICOS" class="temas">
             <h2 class="titulostemas">Algunos de <span class="salto"></span>nuestros temas</h2>
             <div class="icon">
-                <img class="icon1" src="images/icon1.svg"> <p class="texto">Trabajo remoto</p>
-                <img class="icon2" src="images/icon2.svg"> <p class="texto">Repensando la <span class="salto"></span>programación</p>
-                <img class="icon3" src="images/icon3.svg"> <p class="texto">Bases del código</p>
-                <img class="icon4" src="images/icon4.svg"> <p class="texto">Seguridad informática</p>
-         </div>
+                <img class="icon1" src="images/icon1.svg" alt="icon1"> <p class="texto">Trabajo remoto</p>
+                <img class="icon2" src="images/icon2.svg" alt="icon2"> <p class="texto">Repensando la <span class="salto"></span>programación</p>
+                <img class="icon3" src="images/icon3.svg" alt="icon3"> <p class="texto">Bases del código</p>
+                <img class="icon4" src="images/icon4.svg" alt="icon4"> <p class="texto">Seguridad informática</p>
+            </div>
         </div>
-</div>
 
 
 <!-- Escucha-->
 <div class="blue">
-            <h2 class="titulo">¿Querés las <span class="salto"></span> <span class="salto">últimas</span> <span class="salto">novedades?</h2></span>
+            <h2 class="titulo">¿Querés las <span class="salto"></span> <span class="salto">últimas</span> <span class="salto">novedades?</span></h2>
             <button class="btn-episodios">ESCUCHÁ LOS EPISODIOS</button>
-        </div>
 </div>
 
 <!-- footer-->
@@ -136,8 +134,6 @@
         <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="https://www.telegram.org/" target="_blank"><i class="fab fa-telegram-plane"></i></a>  
     </div>
-</div>
-
 </div>
 
 </footer>
