--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
        <a href="#"> <img class="logo" src="images/logo.svg" alt="logo"></a>
        <input type="checkbox" name="first" id="first" class="first"/>
             <label for="first" class="cerrar"> 
-                <section class="hambur"><!-- Diseño de Hamburguesa -->
-                    <div class="linea1"></div>
-                    <div class="linea2"></div>
-                    <div class="linea3"></div>
-                </section>
+                <span class="hambur"><!-- Diseño de Hamburguesa -->
+                    <span class="linea1"></span>
+                    <span class="linea2"></span>
+                    <span class="linea3"></span>
+                </span> 
             </label>
             
                 <nav class="my-navbar">
